[package]
name = 'phyvox'
version = '0.1.0'
edition = '2021'

[dependencies]
bevy-inspector-egui = '0.18.3'
bevy_flycam = '0.10.1'
env_logger = '0.10.0'
log = '0.4.17'
rand = '0.8.5'
bevy = '0.10.1'
ahash = '0.8.3'
rustc-hash = '1.1.0'
serde = '1.0.163'
serde_json = '1.0.96'

[dependencies.mlua]
version = "0.8.9"
features = ["lua54", "vendored", "macros", "mlua_derive", "serialize", "serde"]

[dependencies.bevy_rapier3d]
version = '0.21.0'
features = [
    'simd-stable',
    'debug-render',
    'parallel',
]

[dependencies.rc_controller]
path = '../../joystick/rc_controller'
[profile.release]
debug = true

[features]
